--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,7 @@ dev-dependencies = [
     "black>=23.0.0",
     "isort>=5.12.0",
 ]
+
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
