--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "openai>=1.99.6",
     "prompt-toolkit>=3.0.51",
     "psutil>=7.0.0",
+    "croniter>=1.3.15",
 ]
 
 [project.scripts]
