--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "prompt-toolkit>=3.0.51",
     "psutil>=7.0.0",
     "croniter>=1.3.15",
+    "redis>=6.4.0",
 ]
 
 [project.scripts]
