--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "croniter>=1.3.15",
     "redis>=6.4.0",
     "anyio>=4.10.0",
+    "logging>=0.4.9.6",
+    "ta-lib>=0.6.5",
 ]
 
 [project.scripts]
