--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "anyio>=4.10.0",
     "logging>=0.4.9.6",
     "ta-lib>=0.6.5",
+    "tiktoken>=0.11.0",
 ]
 
 [project.scripts]
