--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "logging>=0.4.9.6",
     "ta-lib>=0.6.5",
     "tiktoken>=0.11.0",
+    "quote>=3.0",
 ]
 
 [project.scripts]
