--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "tiktoken>=0.11.0",
     "quote>=3.0",
     "chroma>=0.2.0",
+    "httpx>=0.24.0",
 ]
 
 [project.scripts]
@@ -48,7 +49,8 @@ index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 
 
 
-dev-dependencies = [
+[project.optional-dependencies]
+dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "mypy>=1.4.0",
