--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,12 @@ dependencies = [
     "logging>=0.4.9.6",
     "ta-lib>=0.6.5",
     "tiktoken>=0.11.0",
-
     "quote>=3.0",
     "chroma>=0.2.0",
     "httpx>=0.24.0",
     "PyPDF2>=3.0.0",
     "docx>=0.2.4",
+    "pymupdf>=1.26.4",
 ]
 
 [project.scripts]
