--- a/config/settings.example.yaml
+++ b/config/settings.example.yaml
@@ -27,6 +27,12 @@ llm:
     model: "llama3.1"
     timeout: 120
 
+  chatglm:
+    api_key: "sk-xxxx"
+    base_url: "https://open.bigmodel.cn/api/paas/v4/"
+    model: "glm-4.5"
+    timeout: 120
+
 # Redis 配置
 redis:
   host: "127.0.0.1"
