feat: 添加浏览器历史记录和URL内容获取功能，更新相关依赖

--- a/config/mcp_config.json
+++ b/config/mcp_config.json
@@ -13,6 +13,13 @@
       "command": "python",
       "args": ["src/stock_cli/tools/mcp_server/rag_server.py"],
       "env": {}
+    },
+    {
+      "name": "browser_server",
+      "type": "stdio",
+      "command": "python",
+      "args": ["src/stock_cli/tools/mcp_server/browser_server.py"],
+      "env": {}
     }
   ]
 }
