--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "PyPDF2>=3.0.0",
     "docx>=0.2.4",
     "pymupdf4llm>=0.0.27",
+    "browser-history>=0.4.1",
 ]
 
 [project.scripts]
