--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "docx>=0.2.4",
     "pymupdf4llm>=0.0.27",
     "browser-history>=0.4.1",
+    "tavily-python>=0.7.12",
 ]
 
 [project.scripts]
