feat: 添加沙箱服务器以安全执行模型生成脚本

--- a/config/mcp_config.json
+++ b/config/mcp_config.json
@@ -27,6 +27,13 @@
       "command": "python",
       "args": ["src/stock_cli/tools/mcp_server/websearch_server.py"],
       "env": {}
+    },
+    {
+      "name": "sandbox_server",
+      "type": "stdio",
+      "command": "python",
+      "args": ["-m", "stock_cli.tools.mcp_server.sandbox_server"],
+      "env": {}
     }
   ]
 }
