feat: 添加playwright_server配置到mcp_config.json

--- a/config/mcp_config.json
+++ b/config/mcp_config.json
@@ -34,6 +34,13 @@
       "command": "python",
       "args": ["-m", "stock_cli.tools.mcp_server.sandbox_server"],
       "env": {}
+    },
+    {
+      "name": "playwright_server",
+      "type": "stdio",
+      "command": "npx",
+      "args": ["-y", "@executeautomation/playwright-mcp-server"],
+      "env": {}
     }
   ]
 }
